src/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
    margin: 0;
    height: 100%;
    width: 100%;
    overflow: auto;
}

::-webkit-scrollbar {
    background: transparent;
    height: 2px;
    width: 2px;
}

::-webkit-scrollbar-thumb {
    background: white;
}

:root {
    --opaque-white: rgba(255, 255, 255, 0.9);
    --dirty-white: #d6dfe0;
    --custom-blue: rgb(37, 99, 235);
}

body {
    font-family: "Inter", sans-serif;
    background: radial-gradient(
        circle at 22% 30%,
        #18191c 20%,
        #101011 50%,
        #09181a 90%,
        #021f23
    );
    color: var(--opaque-white, white);
}

